--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
   <script src="https://cdn.babylonjs.com/babylon.js"></script>
 
   <script>
+    //import "hammerjs";
     /**********************
      * Helpers geoespaciais
      **********************/
@@ -226,10 +227,14 @@
       scene.clearColor = new BABYLON.Color4(0.65, 0.78, 0.95, 1.0);
 
       // Câmera 1ª pessoa estática (olhar livre)
+      // usar ArcRotateCamera, precisa de refinamento
       const camera = new BABYLON.ArcRotateCamera("cam",0, 0.05, 0, new BABYLON.Vector3(0, 1.7, 0), scene);
       camera.minZ = 0.05;
       camera.speed = 0; // sem deslocamento
       camera.attachControl(canvas, true);
+
+      camera.inertia = 0.75
+      camera.inputs.attached.pointers.useNaturalPinchZoom = true;
 
       // Ativa touch-look personalizado (arrasta para girar)
       //setupTouchLook(camera, canvas);
