--- a/index.html
+++ b/index.html
@@ -226,13 +226,18 @@
       scene.clearColor = new BABYLON.Color4(0.65, 0.78, 0.95, 1.0);
 
       // Câmera 1ª pessoa estática (olhar livre)
-      const camera = new BABYLON.ArcRotateCamera("cam", new BABYLON.Vector3(0, 1.7, 0), scene);
+      const camera = new BABYLON.ArcRotateCamera(
+                "arcCam",
+                -Math.PI / 2, // Inicia olhando de frente para o alvo
+                Math.PI / 2.5, // Um pouco inclinado para baixo
+                10, // Distância inicial do alvo
+                scene);
       camera.minZ = 0.05;
       camera.speed = 0; // sem deslocamento
       camera.attachControl(canvas, true);
 
       // Ativa touch-look personalizado (arrasta para girar)
-      setupTouchLook(camera, canvas);
+      //setupTouchLook(camera, canvas);
 
       // Luz ambiente
       new BABYLON.HemisphericLight("h", new BABYLON.Vector3(0.2, 1, -0.2), scene);
