--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       scene.clearColor = new BABYLON.Color4(0.65, 0.78, 0.95, 1.0);
       const targetPosition = new BABYLON.Vector3(0, 0.05, 0);
       // Câmera 1ª pessoa estática (olhar livre)
-      const camera = new BABYLON.ArcRotateCamera("cam",0, 0.05, 0, new BABYLON.Vector3(0, 1.7, 0), scene);5;
+      const camera = new BABYLON.ArcRotateCamera("cam",0, 0.05, 0, new BABYLON.Vector3(0, 1, 0), scene);
       //camera.speed = 0; // sem deslocamento
       camera.attachControl(canvas, true);
       camera.inertia = 0.75
